--- a/reservation/src/main/resources/application.yml
+++ b/reservation/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8011
+  port: 8012
 spring:
   datasource:
-    url: jdbc:h2:mem:payment
+    url: jdbc:h2:mem:reservation
     driverClassName: org.h2.Driver
     username: admin
     password: admin
@@ -29,11 +29,8 @@ spring:
       auto-offset-reset: latest
 
 app:
-  topic-name: xmfueozy-my-kafka-topic
-  payment-feedback-topic-name: xmfueozy-payment-feedback-topic
+  topic-name: xmfueozy-reservation-request-topic
   group-id: xmfueozy-consumers
-  payment-feedback-publish: http://localhost:8047/api/v1/event/payment-feedback
-  reservation-request-publish: http://localhost:8047/api/v1/event/reservation-request
-  reservation-feedback-topic-name: xmfueozy-reservation-feedback-topic
+  reservation-feedback-publish: http://localhost:8047/api/v1/event/reservation-feedback
 
   # Access H2 console : http://localhost:8050/h2-console/
