--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>paymnet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>booking</name>
+	<name>payment</name>
 	<description>payment service</description>
 	<properties>
 		<java.version>17</java.version>
